tests/spec/fail/import_alias_conflict.aja
import ("math" as lib)
import ("time" as lib)
